# pdfrename

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml  pytest.yml
pdfrename/: __init__.py  americanexpress.py  aws.py  azure.py  chase.py  components.py  digikey.py  edf.py  enel.py  fineco.py  google.py  hounslow.py  hyperoptic.py  kbc.py  lloyds.py  mouser.py  ms_bank.py  natwest.py  newday.py  nutmeg.py  o2.py  octopus_energy.py  payslips_facebook_uk.py  pdfrename.py  santander.py  scaleway.py  schwab.py  soenergy.py  tesco_bank.py  thameswater.py  utils.py  vodafone.py
pdfrename/doctypes/: en.py
pdfrename/lib/: itext.py  pdf_document.py  renamer.py  utils.py
pdfrename/renamers/: __init__.py  aaisp.py  acquerisorgive.py  adp_payslips.py  americanexpress.py  aws.py  azure.py  chase.py  digikey.py  ebay.py  edf.py  enel.py  fineco.py  fiserv.py  gandi.py  google.py  hetzner.py  hl.py  hounslow.py  hyperoptic.py  kbc.py  lloyds.py  mouser.py  ms_bank.py  natwest.py  nec_espws.py  newday.py  nutmeg.py  o2.py  octopus_energy.py  payslips_facebook_uk.py  santander.py  scaleway.py  schwab.py  soenergy.py  tesco_bank.py  thameswater.py  tiscali_it.py  tsb.py  veritas.py  (+3 more)
tools/: pdfrename.py
