# SPDX-FileCopyrightText: 2020 Diego Elio Pettenò
#
# SPDX-License-Identifier: 0BSD

[metadata]
name = pdfrenamer
description = Rough tool to try and rename bills and invoices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flameeyes/pdfrenamer
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_files =
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    pdf

[options]
packages = find:
install_requires =
    click
    click-log
    dateparser
    pdfminer.six >= 20200720
python_requires = ~= 3.8

[options.entry_points]
console_scripts =
    pdfrename = pdfrename.pdfrename:main

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
